tests/programs/invalid/synchronized_statement.java
public class synchronized_statement {
  public int x;
  public void m() {
    synchronized(x) {
      x = x-1;
    }
}